--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -19,7 +19,7 @@ body {
 }
 .background-image {
   margin-top: 7rem;
-  background-image: url("/home/octopus/Pictures/invest.jpg");
+  background-image: url("https://i.ibb.co/DP0GnTQz/Snapshot-2025-01-29-23-10-04.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
