moved some components to pages folder added image url instead of raw image

--- a/client/src/components/DealRoom/DealRoomNewMeeting.css
+++ b/client/src/components/DealRoom/DealRoomNewMeeting.css
@@ -40,3 +40,8 @@ form input[type="text"] {
 	font-family: "Arial", sans-serif;
 	font-size: 18px;
 }
+
+.main-container{
+    display: flex;
+    width: 100%;
+}
