--- a/client/src/components/NavBar/InvestorNavbar.css
+++ b/client/src/components/NavBar/InvestorNavbar.css
@@ -29,10 +29,11 @@
   
   .nav-link {
 	color: rgba(255, 255, 255, 0.9) !important;
-	font-weight: 500;
-	padding: 0.5rem 1rem !important;
+	font-weight: 400;
+	padding: 0rem 0.5rem !important;
 	border-radius: 6px;
 	transition: all 0.3s ease;
+	font-size: 18px;
   }
   
   .nav-link:hover {
